# UndertaleSaveEditor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  RELEASE.md  UndertaleSaveEditor.desktop  UndertaleSaveEditor.pro  assets.qrc  configdialog.cpp  configdialog.h  dataeditor.cpp  dataeditor.h  dialogs.cpp  dialogs.h  eslint.config.mjs  icon.rc  index.html  initools.cpp  initools.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package-lock.json  package.json  pages.cpp  pages.h  resource.h  resources.qrc  stylelint.config.mjs  tools.cpp  tools.h  version.json
.github/workflows/: manual-build.yml
images/: icon.icns
release/: README.md
src/: filedownloader.h  helpers.h  main.cpp
src/core/: dialogs.cpp  dialogs.h  initools.cpp  initools.h  mainwindow.cpp  mainwindow.h  pages.cpp  pages.h  tools.cpp  tools.h
strings/: dullfile  freshfile  infofile  rangefile  roomfile  sortfile  typefile  undertale.ini
web/: common.js  helpers.js  index.js
web/core/: common.js  initools.js  pages.js  tools.js
web/stylesheets/: dialog.css  index.css
